--- a/blog.html
+++ b/blog.html
@@ -43,12 +43,12 @@
         <article>
             <h2>Gladys' Blog Post 26th May 2014</h2>
             <h2>Migrating to the Cloud: Best Practices for Small Businesses</h2>
-            <p>Blog content goes here.</p>
+            <p>Plan for data Migration<br>Assess your needs<br>Train your Team<br>Monitor Performance<br>Ensure security</p>
         </article>
         <article>
             <h2>Eunice's Blog 06th Sep 2019</h2>
             <h2>The Role of Data in Shaping Product Strategy</h2>
-            <p>Blog content goes here.</p>
+            <p>Customer Insights<br>A/B Testing</p>
         </article>
     </section>
 </body>
