--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
         <article>
             <h2>Eunice's Blog 06th Sep 2019</h2>
             <h2>The Role of Data in Shaping Product Strategy</h2>
-            <p>Customer Insights<br>A/B Testing</p>
+            <p>Customer Insights<br>A/B Testing<br>Product development<br>Competitive Analysis<br></p>
         </article>
     </section>
 </body>
