--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h3>Joshua Pius</h3>
             <p><u>Contact: +254717340006</u></p>
             <a href="jmpyang66@gmail.com">Email</a>
-            <p><a href="https://wa.me/0717340006" class="social-icon"><i class="fa fa-whatsapp"></i></a></p>
+            <p><a href="https://wa.me/+254717340006" class="social-icon"><i class="fa fa-whatsapp"></i></a></p>
             <a href="https://facebook.com" class="social-icon"><i class="fa fa-facebook"></i></a>
             <a href="https://twitter.com" class="social-icon"><i class="fa fa-twitter"></i></a>
             <a href="https://instagram.com" class="social-icon"><i class="fa fa-instagram"></i></a>
